# aws-resource-scanner

./: .gitignore  README.md  dev-requirements.txt  pyproject.toml
src/aws_resource_scanner/: __main__.py  exclusions.py  types.py
src/aws_resource_scanner/checks/: MissingPermissionBoundary.py  OpenSecurityGroupEgressRule.py  OpenSecurityGroupIngressRule.py  load_balancers.py
test/: conftest.py
test/checks/: test_MissingPermissionBoundary.py  test_OpenSecurityGroupEgressRule.py  test_OpenSecurityGroupIngressRule.py
